--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -31,7 +31,28 @@
     padding: 10px 20px;
     border-radius: 20px;
     cursor: pointer;
+    transition: 0.4s;
 }
 .navbar button:hover{
     background-color:azure;
+}
+.navbar .active{
+    padding-bottom: 2px;
+    border-bottom: 2px solid #495549;
+    
+}
+.navbar li{
+    cursor: pointer;
+}
+.navbar-search-icon{
+    position: relative;
+}
+.navbar .dot{
+    position: absolute;
+    min-width: 10px;
+    min-height: 10px;
+    background-color: tomato;
+    border-radius: 5px;
+    top:-8px;
+    right:-8px;
 }
