--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -7,11 +7,25 @@
 }
 .header-contents{
     position: absolute;
-    display: flex;
+    display:flex;
     flex-direction: column;
-    align-items: start;
-    gap: 1.5vw;
-    max-width: 50%;
+    align-items:center;
+    gap: 1vw;
+    max-width: 60%;
     bottom: 10%;
-    left: 6vw;
+    left: 23vw;
+    animation: fadeIn 3s;
+}
+.header button{
+    background: transparent;
+    font-size: 16px;
+    border: 1px transparent black;
+    color:black;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: 0.4s;
+}
+.header button:hover{
+    background-color: beige;
 }
