--- a/frontend/src/components/Shop/shop.css
+++ b/frontend/src/components/Shop/shop.css
@@ -12,3 +12,14 @@
     margin: 20px 0px;
     overflow-x:scroll;
 }
+.Collection-Lists img{
+    width: 7.5vw;
+    cursor: pointer;
+    min-width: 80px;
+    border-radius: 50%;
+    transition: 0.2s;
+}
+.Collection-Lists .active{
+    border: 4px solid black;
+    padding: 2px;
+}
