updated all category images and name

--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -26,7 +26,7 @@
 .navbar button{
     background: transparent;
     font-size: 16px;
-    border: 1px solid tomato;
+    border: 1px solid black;
     color: #495549;
     padding: 10px 20px;
     border-radius: 20px;
