--- a/frontend/src/components/Display/Display.css
+++ b/frontend/src/components/Display/Display.css
@@ -1,5 +1,5 @@
 .display{
-    margin-top: 30px;
+    margin-top: 30px; /* Position up/down relative to the page */
 }
 .display-list{
     display:grid;
