update itemcount css icons

--- a/frontend/src/components/Items/Items.css
+++ b/frontend/src/components/Items/Items.css
@@ -31,3 +31,26 @@
     margin-top: 15px;
     font-weight: 500;
 }
+.item-img-container{
+    position: relative;
+}
+.item-img-container .add{
+    width: 35px;
+    position: absolute;
+    bottom:15px;
+    right:15px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+.item-counter{
+    position: absolute;
+    bottom:15px;
+    right:15px;
+    display: flex;
+    align-items:center;
+    gap: 10px;
+    padding: 6px;
+    border-radius: 50px;
+    background-color: white;
+
+}
