--- a/frontend/src/components/LogInPopUp/LogInPopUp.css
+++ b/frontend/src/components/LogInPopUp/LogInPopUp.css
@@ -1,9 +1,13 @@
 .LogInPopUp{
-    position: absolute;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
+    position: fixed;
+    z-index: 1000;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
     display: grid;
+    background: rgba(0,0,0,0.2);
+    backdrop-filter: blur(5px);
 }
 .login-container{
     place-self: center;
