--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -22,6 +22,7 @@
     display: flex;
     align-items: center;
     gap: 40px;
+    margin-top: 1%;
 }
 .navbar button{
     background: transparent;
