--- a/frontend/src/pages/Cart/cart.css
+++ b/frontend/src/pages/Cart/cart.css
@@ -3,11 +3,15 @@
 }
 .cart-item-titles{
     display: grid;
-    grid-template-columns: 1fr 1.5fr 1fr 1fr 0.5fr 1.2fr; /* The Layout of the grid by setting the gap between each column */
+    grid-template-columns: 0.9fr 1.2fr 1fr 1fr 1fr 1fr; /* The Layout of the grid by setting the gap between each column */
     align-items: center;
     color: grey;
     font-size: max(1vw 12px);
 }
 .cart-items-item img{
-    width:80px
+    width:90px;
+    height:100px;
+}
+.cart-items-item .cross{
+    cursor: pointer;
 }
