--- a/frontend/src/pages/Cart/cart.css
+++ b/frontend/src/pages/Cart/cart.css
@@ -41,3 +41,27 @@
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight:600;
 }
+.promo-code{
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 4px;
+}
+.promo-code input{
+    background:transparent;
+    border:none;
+    outline:none;
+    padding-left: 10px;
+    background-color:#eaeaea;
+    padding:12px 5px;
+}
+.promo-code button{
+    width: max(10vw 120px);
+    padding: 12px 5px;
+    background-color: black;
+    border: none;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+}
