--- a/frontend/src/pages/Cart/cart.css
+++ b/frontend/src/pages/Cart/cart.css
@@ -65,3 +65,11 @@
     border-radius: 4px;
     cursor: pointer;
 }
+@media (max-width:750px){
+    .cart-bottom{
+        flex-direction: column-reverse;
+    }
+    .promo-code{
+        justify-content: start;
+    }
+}
