--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -63,9 +63,34 @@
 .nav-profile-dropdown{
     position: absolute;
     display: none;
+    right:0;
     z-index: 1;
 }
-
+.navbar-profile:hover{
+    cursor: pointer;
+}
+.navbar-profile:hover .nav-profile-dropdown{
+    display: flex;
+    flex-direction: column;
+    background-color: #fff2ef;
+    border-radius: 4px;
+    border:1px solid black;
+    outline:2px solid white;
+    list-style: none;
+    width: 150px;
+}
+.nav-profile-dropdown li{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+}
+.nav-profile-dropdown li:hover{
+    color:brown;
+}
+.nav-profile-dropdown img{
+    width: 26px;
+}
 @media (max-width:1050px){
     .navbar .logo{
         width:140px;
